--- a/zshrc.conf
+++ b/zshrc.conf
@@ -65,7 +65,7 @@ ZSH_THEME="agnosterzak"
 # Example format: plugins=(rails git textmate ruby lighthouse)
 # Add wisely, as too many plugins slow down shell startup.
 plugins=(
-  git laravel git-flow docker python yarn tmux 
+  git laravel git-flow docker python yarn tmux  zsh-completions
 )
 
 source $ZSH/oh-my-zsh.sh
@@ -99,6 +99,6 @@ source $ZSH/oh-my-zsh.sh
 
 # alias zshconfig="mate ~/.zshrc"
 # alias ohmyzsh="mate ~/.oh-my-zsh"
-source ~/.zsh/zsh-autosuggestions/zsh-autosuggestions.zsh
-# source $HOME/.bash_aliases
-source $HOME/.bash_aliases
+source ~/.oh-my-zsh/custom/plugins/zsh-autosuggestions/zsh-autosuggestions.zsh
+autoload -U compinit && compinit
+source ~/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
