--- a/zshrc.conf
+++ b/zshrc.conf
@@ -102,3 +102,4 @@ source $ZSH/oh-my-zsh.sh
 source ~/.oh-my-zsh/custom/plugins/zsh-autosuggestions/zsh-autosuggestions.zsh
 autoload -U compinit && compinit
 source ~/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
+source ~/.bash_aliases
