--- a/tmux.conf
+++ b/tmux.conf
@@ -15,16 +15,16 @@ setw -g aggressive-resize on
 
 # Change prefix key to C-a, easier to type, same to "screen"
 unbind C-b
-set -g prefix C-a
+# set -g prefix C-a
 set -g prefix `
 
 # Set parent terminal title to reflect current window in tmux session 
 set -g set-titles on
 set -g set-titles-string "#I:#W"
 
-# Start index of window/pane with 1, because we're humans, not computers
-set -g base-index 1
-setw -g pane-base-index 1
+# Start index of window/pane with 0, because we're programmers
+set -g base-index 0
+setw -g pane-base-index 0
 
 # Enable mouse support
 set -g mouse on
