--- a/tmux.conf
+++ b/tmux.conf
@@ -132,7 +132,7 @@ setw -g mode-keys vi
 unbind [
 bind Escape copy-mode
 unbind p
-bind p paste-buffer
+bind P paste-buffer
 bind -Tcopy-mode-vi 'v' send -X begin-selection
 bind -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 
