DragSelect Copy Mode init

--- a/tmux.conf
+++ b/tmux.conf
@@ -59,6 +59,8 @@ unbind M-Down # resize 5 rows down
 unbind M-Right # resize 5 rows right
 unbind M-Left # resize 5 rows left
 
+# yank
+yank="~/.tmux/yank.sh"
 
 # Edit configuration and reload
 bind C-e new-window -n 'tmux.conf' "sh -c '\${EDITOR:-vim} ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display \"Config reloaded\"'"
@@ -87,6 +89,7 @@ bind -r [ select-pane -t :.-
 bind -r ] select-pane -t :.+
 bind -r Tab last-window   # cycle thru MRU tabs
 bind -r C-o swap-pane -D
+
 
 # Zoom pane
 bind + resize-pane -Z
@@ -133,8 +136,14 @@ unbind [
 bind Escape copy-mode
 unbind p
 bind P paste-buffer
-bind -Tcopy-mode-vi 'v' send -X begin-selection
-bind -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+bind -T copy-mode-vi 'v' send -X begin-selection
+bind -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+
+# Copy selection on drag end event, but do not cancel copy mode and do not clear selection
+# clear select on subsequence mouse click
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe "$yank"
+bind -T copy-mode-vi MouseDown1Pane select-pane send-keys -X clear-selection
+set -g @copy_use_osc52_fallback on
 
 
 # =====================================
