--- a/tmux.conf
+++ b/tmux.conf
@@ -142,7 +142,7 @@ bind -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "tmux save-buffer - | reat
 # Copy selection on drag end event, but do not cancel copy mode and do not clear selection
 # clear select on subsequence mouse click
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe "$yank"
-bind -T copy-mode-vi MouseDown1Pane select-pane send-keys -X clear-selection
+# bind -T copy-mode-vi MouseDown1Pane select-pane send-keys -X clear-selection
 set -g @copy_use_osc52_fallback on
 
 
