--- a/tmux.conf
+++ b/tmux.conf
@@ -29,7 +29,6 @@ setw -g pane-base-index 0
 # Enable mouse support
 set -g mouse on
 
-
 # ==========================
 # ===   Key bindings     ===
 # ==========================
@@ -136,13 +135,9 @@ unbind [
 bind Escape copy-mode
 unbind p
 bind P paste-buffer
-bind -T copy-mode-vi 'v' send -X begin-selection
-bind -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 
-# Copy selection on drag end event, but do not cancel copy mode and do not clear selection
-# clear select on subsequence mouse click
-bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe "$yank"
-# bind -T copy-mode-vi MouseDown1Pane select-pane send-keys -X clear-selection
+# Enable mouse selection copy
+set -g @yank_selection_mouse 'clipboard'
 set -g @copy_use_osc52_fallback on
 
 
