vim like visual selection is back

--- a/tmux.conf
+++ b/tmux.conf
@@ -137,6 +137,11 @@ unbind p
 bind P paste-buffer
 
 # Enable mouse selection copy
+setw -g mode-keys vi
+bind-key -T copy-mode-vi 'v' send -X begin-selection     # Begin selection in copy mode.
+bind-key -T copy-mode-vi 'C-v' send -X rectangle-toggle  # Begin selection in copy mode.
+bind-key -T copy-mode-vi 'y' send -X copy-selection   
+
 set -g @yank_selection_mouse 'clipboard'
 set -g @copy_use_osc52_fallback on
 
