tmux.conf refubrished

--- a/zshrc.conf
+++ b/zshrc.conf
@@ -41,7 +41,7 @@ ZSH_THEME="agnosterzak"
 # ENABLE_CORRECTION="true"
 
 # Uncomment the following line to display red dots whilst waiting for completion.
-# COMPLETION_WAITING_DOTS="true"
+COMPLETION_WAITING_DOTS="true"
 
 # Uncomment the following line if you want to disable marking untracked files
 # under VCS as dirty. This makes repository status check for large repositories
@@ -65,7 +65,14 @@ ZSH_THEME="agnosterzak"
 # Example format: plugins=(rails git textmate ruby lighthouse)
 # Add wisely, as too many plugins slow down shell startup.
 plugins=(
-  git laravel git-flow docker python yarn tmux  zsh-completions
+  git 
+  git-flow
+  laravel  
+  # docker 
+  # python 
+  yarn 
+  zsh-completions 
+  tmux
 )
 
 source $ZSH/oh-my-zsh.sh
