--- a/tmux.conf
+++ b/tmux.conf
@@ -38,8 +38,8 @@ unbind "\$" # rename-session
 unbind ,    # rename-window
 unbind %    # split-window -h
 unbind '"'  # split-window
-unbind }    # swap-pane -D
-unbind {    # swap-pane -U
+unbind '}'    # swap-pane -D
+unbind '{'    # swap-pane -U
 # unbind [    # paste-buffer
 unbind ]    
 unbind "'"  # select-window
@@ -68,7 +68,7 @@ bind C-e new-window -n 'tmux.conf' "sh -c '\${EDITOR:-vim} ~/.tmux.conf && tmux 
 bind C-r source-file ~/.tmux.conf \; display "Config reloaded"
 
 # new window and retain cwd
-bind c new-window -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}" -n "awesome"
 
 # Prompt to rename window right after it's created
 set-hook -g after-new-window 'command-prompt -I "#{window_name}" "rename-window '%%'"'
@@ -98,7 +98,7 @@ bind L command-prompt -p "Link window from (session:window): " "link-window -s %
 
 # Swap panes back and forth with 1st pane
 # When in main-(horizontal|vertical) layouts, the biggest/widest panel is always @1
-bind \ if '[ #{pane_index} -eq 1 ]' \
+bind '\' if '[ #{pane_index} -eq 1 ]' \
      'swap-pane -s "!"' \
      'select-pane -t:.1 ; swap-pane -d -t 1 -s "!"'
 
@@ -196,7 +196,7 @@ separator_powerline_right=""
 setw -g window-status-style "fg=$color_status_text,bg=$color_dark"
 setw -g window-status-format " #I - #W "
 setw -g window-status-current-style "fg=$color_light,bold,bg=$color_main"
-setw -g window-status-current-format "#[fg=$color_dark,bg=$color_main]$separator_powerline_right#[default] #I:#W# #[fg=$color_main,bg=$color_dark]$separator_powerline_right#[default]"
+setw -g window-status-current-format "#[fg=$color_main,bg=$color_dark]$separator_powerline_right#[fg=$color_level_ok] #I:#W #[fg=$color_main,bg=$color_dark]$separator_powerline_left#[default]"
 
 # when window has monitoring notification
 setw -g window-status-activity-style "fg=$color_main"
@@ -215,18 +215,18 @@ set -g status-right-length 100
 # note, that this is not the complete list, some of them are loaded from plugins
 wg_session="#[fg=$color_session_text] #S #[default]"
 wg_battery="#{battery_status_fg} #{battery_icon} #{battery_percentage}"
-wg_date="#[fg=$color_secondary]%h %d %H:%M#[default]"
-wg_user_host="#[fg=$color_secondary]#(whoami)#[fg=$color_red]@#H"
+# wg_date="#[fg=$color_secondary]%h %d %H:%M#[default]"
+wg_user_host="#[fg=$color_level_ok]#(whoami)#[fg=$color_secondary]@#H"
 wg_is_zoomed="#[fg=$color_dark,bg=$color_secondary]#{?window_zoomed_flag,[Z],}#[default]"
 # TODO: highlighted for nested local session as well
 wg_is_keys_off="#[fg=$color_light,bg=$color_window_off_indicator]#([ $(tmux show-option -qv key-table) = 'off' ] && echo 'OFF')#[default]"
 
 set -g status-left "$wg_session"
-set -g status-right "#{prefix_highlight} $wg_is_keys_off $wg_is_zoomed #{sysstat_cpu} | #{sysstat_mem} | #{sysstat_loadavg} | $wg_user_host | $wg_date | #{online_status} | $wg_battery"
+set -g status-right "#{prefix_highlight} #{online_status} | $wg_battery | $wg_is_keys_off $wg_is_zoomed #{sysstat_cpu} | #{sysstat_mem} | #{sysstat_loadavg} | $wg_user_host"
 
 # online and offline icon for tmux-online-status
-set -g @online_icon "#[fg=$color_level_ok]●#[default]"
-set -g @offline_icon "#[fg=$color_level_stress]✘ Offline#[default]"
+set -g @online_icon "#[fg=$color_level_ok]✅#[default]"
+set -g @offline_icon "#[fg=$color_level_stress]❌ Offline#[default]"
 
 # Configure view templates for tmux-plugin-sysstat "MEM" and "CPU" widget
 set -g @sysstat_mem_view_tmpl 'MEM:#[fg=#{mem.color}]#{mem.pused}#[default] #{mem.used}'
