--- a/tmux.conf
+++ b/tmux.conf
@@ -216,16 +216,16 @@ set -g status-right-length 100
 wg_session="#[fg=$color_session_text] #S #[default]"
 wg_battery="#{battery_status_fg} #{battery_icon} #{battery_percentage}"
 # wg_date="#[fg=$color_secondary]%h %d %H:%M#[default]"
-wg_user_host="#[fg=$color_level_ok]#(whoami)#[fg=$color_secondary]@#H"
+wg_user_host="#[fg=$color_level_ok]#(whoami)#[fg=$color_secondary]@#H#[default]"
 wg_is_zoomed="#[fg=$color_dark,bg=$color_secondary]#{?window_zoomed_flag,[Z],}#[default]"
 # TODO: highlighted for nested local session as well
 wg_is_keys_off="#[fg=$color_light,bg=$color_window_off_indicator]#([ $(tmux show-option -qv key-table) = 'off' ] && echo 'OFF')#[default]"
 
 set -g status-left "$wg_session"
-set -g status-right "#{prefix_highlight} #{online_status} | $wg_battery | $wg_is_keys_off $wg_is_zoomed #{sysstat_cpu} | #{sysstat_mem} | #{sysstat_loadavg} | $wg_user_host"
+set -g status-right "#{prefix_highlight} #{online_status} $wg_is_keys_off $wg_is_zoomed #{sysstat_cpu} | #{sysstat_mem} | #{sysstat_loadavg} | $wg_user_host | $wg_battery"
 
 # online and offline icon for tmux-online-status
-set -g @online_icon "#[fg=$color_level_ok]✅#[default]"
+set -g @online_icon "#[fg=$color_level_ok]●#[default]"
 set -g @offline_icon "#[fg=$color_level_stress]❌ Offline#[default]"
 
 # Configure view templates for tmux-plugin-sysstat "MEM" and "CPU" widget
