--- a/tmux.conf
+++ b/tmux.conf
@@ -196,7 +196,7 @@ separator_powerline_right=""
 setw -g window-status-style "fg=$color_status_text,bg=$color_dark"
 setw -g window-status-format " #I - #W "
 setw -g window-status-current-style "fg=$color_light,bold,bg=$color_main"
-setw -g window-status-current-format "#[fg=$color_main,bg=$color_dark]$separator_powerline_right#[fg=$color_level_ok] #I:#W #[fg=$color_main,bg=$color_dark]$separator_powerline_left#[default]"
+setw -g window-status-current-format "#[fg=$color_level_ok] #I:#W #[default]"
 
 # when window has monitoring notification
 setw -g window-status-activity-style "fg=$color_main"
@@ -302,7 +302,7 @@ bind -T root F12  \
     set prefix None \;\
     set key-table off \;\
     set status-style "fg=$color_status_text,bg=$color_window_off_status_bg" \;\
-    set window-status-current-format "#[fg=$color_window_off_status_bg,bg=$color_window_off_status_current_bg]$separator_powerline_right#[default] #I:#W# #[fg=$color_window_off_status_current_bg,bg=$color_window_off_status_bg]$separator_powerline_right#[default]" \;\
+    set window-status-current-format "#[fg=$color_window_off_status_bg,bg=$color_window_off_status_current_bg]-#[default] #I:#W# -#[default]" \;\
     set window-status-current-style "fg=$color_dark,bold,bg=$color_window_off_status_current_bg" \;\
     if -F '#{pane_in_mode}' 'send-keys -X cancel' \;\
     refresh-client -S \;\
