Gesture Script Added

--- a/zshrc.conf
+++ b/zshrc.conf
@@ -65,14 +65,14 @@ COMPLETION_WAITING_DOTS="true"
 # Example format: plugins=(rails git textmate ruby lighthouse)
 # Add wisely, as too many plugins slow down shell startup.
 plugins=(
-  git 
-  git-flow
-  laravel  
-  # docker 
+ # git 
+ # git-flow
+ # laravel  
+ # docker 
   # python 
-  yarn 
+ # yarn 
   zsh-completions 
-  tmux
+  # tmux
 )
 
 source $ZSH/oh-my-zsh.sh
