`deploy.sh` restructured

--- a/vimrc.conf
+++ b/vimrc.conf
@@ -1,4 +1,4 @@
-set nocompatible              " be iMproved, required
+set nocompatible              " be improved, required
 filetype off                  " required
 
 " set the runtime path to include Vundle and initialize
@@ -26,7 +26,7 @@ set number              " show line numbers
 set wrap                " wrap lines
 set encoding=utf-8      " set encoding to UTF-8 (default was "latin1")
 set mouse=a             " enable mouse support (might not work well on Mac OS X)
-"set showmatch           " highlight matching parentheses / brackets [{()}]
+set showmatch           " highlight matching parentheses / brackets [{()}]
 "set visualbell          " blink cursor on error, instead of beeping
 set laststatus=2
 """" Vim Appearance
