--- a/zshrc.conf
+++ b/zshrc.conf
@@ -1,4 +1,4 @@
-ZSH_TMUX_AUTOSTART=true
+ZSH_TMUX_AUTOSTART=false
 export TERM=xterm-256color
 # If you come from bash you might have to change your $PATH.
 export PATH=$HOME/bin:/usr/local/bin:$PATH
@@ -10,7 +10,7 @@ export ZSH="$HOME/.oh-my-zsh"
 # load a random theme each time oh-my-zsh is loaded, in which case,
 # to know which specific one was loaded, run: echo $RANDOM_THEME
 # See https://github.com/robbyrussell/oh-my-zsh/wiki/Themes
-ZSH_THEME="agnosterzak-forked"
+ZSH_THEME="agnosterzak-pro"
 
 # Set list of themes to pick from when loading at random
 # Setting this variable when ZSH_THEME=random will cause zsh to load
@@ -66,13 +66,15 @@ COMPLETION_WAITING_DOTS="true"
 # Add wisely, as too many plugins slow down shell startup.
 plugins=(
   git 
-  git-flow
-  laravel  
+  # git-flow
+  # laravel  
   # docker 
   # python 
-  yarn 
+  # yarn 
   zsh-completions 
-  tmux
+  zsh-autosuggestions
+  zsh-syntax-highlighting
+  # tmux
 )
 
 source $ZSH/oh-my-zsh.sh
@@ -104,9 +106,5 @@ source $ZSH/oh-my-zsh.sh
 #
 # Example aliases
 
-# alias zshconfig="mate ~/.zshrc"
-# alias ohmyzsh="mate ~/.oh-my-zsh"
-source ~/.oh-my-zsh/custom/plugins/zsh-autosuggestions/zsh-autosuggestions.zsh
+#zsh-completions
 autoload -U compinit && compinit
-source ~/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
-source ~/.bash_aliases
