--- a/zshrc.conf
+++ b/zshrc.conf
@@ -90,3 +90,7 @@ export EDITOR='vim'
 # export SSH_KEY_PATH="~/.ssh/rsa_id"
 source ~/.oh-my-zsh/custom/plugins/zsh-autosuggestions/zsh-autosuggestions.zsh
 autoload -U compinit && compinit
+
+bindkey -e
+bindkey '^[[1;3C' forward-word
+bindkey '^[[1;3D' backward-word
