--- a/tmux.conf
+++ b/tmux.conf
@@ -13,18 +13,18 @@ setw -g allow-rename off
 setw -g automatic-rename off
 setw -g aggressive-resize on
 
-# Change prefix key to C-a, easier to type, same to "screen"
+# Change prefix key to "`", easier to type, same to "screen"
 unbind C-b
-# set -g prefix C-a
 set -g prefix `
+# My keyboard is from another region -_- 
+set -g prefix2 §
 
 # Set parent terminal title to reflect current window in tmux session 
 set -g set-titles on
 set -g set-titles-string "#I:#W"
 
-# Start index of window/pane with 0, because we're programmers
-set -g base-index 0
-setw -g pane-base-index 0
+set -g base-index 1
+setw -g pane-base-index 1
 
 # Enable mouse support
 set -g mouse on
@@ -40,7 +40,7 @@ unbind %    # split-window -h
 unbind '"'  # split-window
 unbind '}'    # swap-pane -D
 unbind '{'    # swap-pane -U
-# unbind [    # paste-buffer
+unbind [    # paste-buffer
 unbind ]    
 unbind "'"  # select-window
 unbind n    # next-window
@@ -89,7 +89,6 @@ bind -r ] select-pane -t :.+
 bind -r Tab last-window   # cycle thru MRU tabs
 bind -r C-o swap-pane -D
 
-
 # Zoom pane
 bind + resize-pane -Z
 
@@ -103,8 +102,8 @@ bind '\' if '[ #{pane_index} -eq 1 ]' \
      'select-pane -t:.1 ; swap-pane -d -t 1 -s "!"'
 
 # Kill pane/window/session shortcuts
-bind x kill-pane
-bind X kill-window
+bind x confirm-before -p "kill pane? (y/n)" kill-pane
+bind X confirm-before -p "kill window? (y/n)" kill-window
 bind C-x confirm-before -p "kill other windows? (y/n)" "kill-window -a"
 bind Q confirm-before -p "kill-session #S? (y/n)" kill-session
 
@@ -190,13 +189,11 @@ set -g status-style "fg=$color_status_text,bg=$color_dark"
 
 # window segments in status line
 set -g window-status-separator ""
-separator_powerline_left=""
-separator_powerline_right=""
 
 setw -g window-status-style "fg=$color_status_text,bg=$color_dark"
-setw -g window-status-format " #I - #W "
-setw -g window-status-current-style "fg=$color_light,bold,bg=$color_main"
-setw -g window-status-current-format "#[fg=$color_level_ok] #I:#W #[default]"
+setw -g window-status-format "  #I - #W  "
+setw -g window-status-current-style "fg=$color_light,bold,bg=$color_dark"
+setw -g window-status-current-format "#[fg=$color_level_ok]  #I - #W  #[default]"
 
 # when window has monitoring notification
 setw -g window-status-activity-style "fg=$color_main"
@@ -214,7 +211,7 @@ set -g status-right-length 100
 # define widgets we're going to use in status bar
 # note, that this is not the complete list, some of them are loaded from plugins
 wg_session="#[fg=$color_session_text] #S #[default]"
-wg_battery="#{battery_status_fg} #{battery_icon} #{battery_percentage}"
+# wg_battery="#{battery_status_fg} #{battery_icon} #{battery_percentage}"
 # wg_date="#[fg=$color_secondary]%h %d %H:%M#[default]"
 wg_user_host="#[fg=$color_level_ok]#(whoami)#[fg=$color_secondary]@#H"
 wg_is_zoomed="#[fg=$color_dark,bg=$color_secondary]#{?window_zoomed_flag,[Z],}#[default]"
@@ -222,14 +219,15 @@ wg_is_zoomed="#[fg=$color_dark,bg=$color_secondary]#{?window_zoomed_flag,[Z],}#[
 wg_is_keys_off="#[fg=$color_light,bg=$color_window_off_indicator]#([ $(tmux show-option -qv key-table) = 'off' ] && echo 'OFF')#[default]"
 
 set -g status-left "$wg_session"
-set -g status-right "#{prefix_highlight} #{online_status} | $wg_battery | $wg_is_keys_off $wg_is_zoomed #{sysstat_cpu} | #{sysstat_mem} | #{sysstat_loadavg} | $wg_user_host"
+set -g status-right "$wg_is_keys_off $wg_is_zoomed #{prefix_highlight} #{online_status} | #{sysstat_mem} | #{sysstat_cpu} | #{sysstat_loadavg} | $wg_user_host"
 
 # online and offline icon for tmux-online-status
 set -g @online_icon "#[fg=$color_level_ok]✅#[default]"
 set -g @offline_icon "#[fg=$color_level_stress]❌ Offline#[default]"
 
 # Configure view templates for tmux-plugin-sysstat "MEM" and "CPU" widget
-set -g @sysstat_mem_view_tmpl 'MEM:#[fg=#{mem.color}]#{mem.pused}#[default] #{mem.used}'
+set -g @sysstat_mem_view_tmpl '#[fg=#{mem.color}]#{mem.pused}#[default] #{mem.used}'
+set -g @sysstat_cpu_view_tmpl '#[fg=#{cpu.color}]#{cpu.pused}#[default]'
 
 # Configure colors for tmux-plugin-sysstat "MEM" and "CPU" widget
 set -g @sysstat_cpu_color_low "$color_level_ok"
@@ -240,16 +238,15 @@ set -g @sysstat_mem_color_low "$color_level_ok"
 set -g @sysstat_mem_color_medium "$color_level_warn"
 set -g @sysstat_mem_color_stress "$color_level_stress"
 
-set -g @sysstat_swap_color_low "$color_level_ok"
-set -g @sysstat_swap_color_medium "$color_level_warn"
-set -g @sysstat_swap_color_stress "$color_level_stress"
-
+# set -g @sysstat_swap_color_low "$color_level_ok"
+# set -g @sysstat_swap_color_medium "$color_level_warn"
+# set -g @sysstat_swap_color_stress "$color_level_stress"
 
 # Configure tmux-battery widget colors
-set -g @batt_color_full_charge "#[fg=$color_level_ok]"
-set -g @batt_color_high_charge "#[fg=$color_level_ok]"
-set -g @batt_color_medium_charge "#[fg=$color_level_warn]"
-set -g @batt_color_low_charge "#[fg=$color_level_stress]"
+# set -g @batt_color_full_charge "#[fg=$color_level_ok]"
+# set -g @batt_color_high_charge "#[fg=$color_level_ok]"
+# set -g @batt_color_medium_charge "#[fg=$color_level_warn]"
+# set -g @batt_color_low_charge "#[fg=$color_level_stress]"
 
 # Configure tmux-prefix-highlight colors
 set -g @prefix_highlight_output_prefix '['
@@ -263,11 +260,10 @@ set -g @prefix_highlight_copy_mode_attr "fg=$color_dark,bg=$color_secondary"
 # ===       Plugins        ===
 # ============================
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-battery'
+# set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-online-status'
 set -g @plugin 'tmux-plugins/tmux-sidebar'
-set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'samoshkin/tmux-plugin-sysstat'
@@ -279,7 +275,8 @@ set -g @sidebar-tree 't'
 set -g @sidebar-tree-focus 'T'
 set -g @sidebar-tree-command 'tree -C'
 
-set -g @open-S 'https://www.google.com/search?q='
+# set -g @open-S 'https://www.google.com/search?q='
+set -g @open-S 'http://ipv4.icanhazip.com/'
 
 
 # ==============================================
