--- a/tmux.conf
+++ b/tmux.conf
@@ -221,8 +221,9 @@ wg_is_keys_off="#[fg=$color_light,bg=$color_window_off_indicator]#([ $(tmux show
 set -g status-left "$wg_session"
 set -g status-right "$wg_is_keys_off $wg_is_zoomed #{prefix_highlight} #{online_status} | #{sysstat_mem} | #{sysstat_cpu} | #{sysstat_loadavg} | $wg_user_host"
 
-# online and offline icon for tmux-online-status
-set -g @online_icon "#[fg=$color_level_ok]✅#[default]"
+# Configure online status ping address
+set -g @route_to_ping 'ipv4.icanhazip.com'
+set -g @online_icon "#[fg=$color_level_ok]✔#[default]"
 set -g @offline_icon "#[fg=$color_level_stress]❌ Offline#[default]"
 
 # Configure view templates for tmux-plugin-sysstat "MEM" and "CPU" widget
@@ -275,8 +276,7 @@ set -g @sidebar-tree 't'
 set -g @sidebar-tree-focus 'T'
 set -g @sidebar-tree-command 'tree -C'
 
-# set -g @open-S 'https://www.google.com/search?q='
-set -g @open-S 'http://ipv4.icanhazip.com/'
+set -g @open-S 'https://www.google.com/search?q='
 
 
 # ==============================================
