new ip alias + last task exit status + offline status w/o emoticon

--- a/tmux.conf
+++ b/tmux.conf
@@ -224,7 +224,7 @@ set -g status-right "$wg_is_keys_off $wg_is_zoomed #{prefix_highlight} #{online_
 # Configure online status ping address
 set -g @route_to_ping 'ipv4.icanhazip.com'
 set -g @online_icon "#[fg=$color_level_ok]✔#[default]"
-set -g @offline_icon "#[fg=$color_level_stress]❌ Offline#[default]"
+set -g @offline_icon "#[fg=$color_level_stress]x Offline#[default]"
 
 # Configure view templates for tmux-plugin-sysstat "MEM" and "CPU" widget
 set -g @sysstat_mem_view_tmpl '#[fg=#{mem.color}]#{mem.pused}#[default] #{mem.used}'
