starship added with multiple theme changes

--- a/tmux.conf
+++ b/tmux.conf
@@ -97,9 +97,9 @@ bind L command-prompt -p "Link window from (session:window): " "link-window -s %
 
 # Swap panes back and forth with 1st pane
 # When in main-(horizontal|vertical) layouts, the biggest/widest panel is always @1
-bind '\' if '[ #{pane_index} -eq 1 ]' \
-     'swap-pane -s "!"' \
-     'select-pane -t:.1 ; swap-pane -d -t 1 -s "!"'
+# bind '\' if '[ #{pane_index} -eq 1 ]' \
+#      'swap-pane -s "!"' \
+#      'select-pane -t:.1 ; swap-pane -d -t 1 -s "!"'
 
 # Kill pane/window/session shortcuts
 bind x confirm-before -p "kill pane? (y/n)" kill-pane
@@ -123,7 +123,6 @@ bind D if -F '#{session_many_attached}' \
 # Hide status bar on demand
 bind C-s if -F '#{s/off//:status}' 'set status off' 'set status on'
 
-
 # enable mouse support for switching panes/windows
 setw -g mouse on
 
@@ -143,7 +142,6 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection
 
 set -g @yank_selection_mouse 'clipboard'
 set -g @copy_use_osc52_fallback on
-
 
 # =====================================
 # ===           Theme               ===
@@ -184,16 +182,12 @@ set -g mode-style "fg=default,bg=$color_main"
 # command line style
 set -g message-style "fg=$color_main,bg=$color_dark"
 
-# status line style
 set -g status-style "fg=$color_status_text,bg=$color_dark"
-
-# window segments in status line
-set -g window-status-separator ""
-
+set -g window-status-separator "|"
 setw -g window-status-style "fg=$color_status_text,bg=$color_dark"
-setw -g window-status-format "  #I - #W  "
+setw -g window-status-format " #I - #W "
 setw -g window-status-current-style "fg=$color_light,bold,bg=$color_dark"
-setw -g window-status-current-format "#[fg=$color_level_ok]  #I - #W  #[default]"
+setw -g window-status-current-format "#[fg=$color_level_ok,bold]  #I - #W  #[default]"
 
 # when window has monitoring notification
 setw -g window-status-activity-style "fg=$color_main"
@@ -213,31 +207,31 @@ set -g status-right-length 100
 wg_session="#[fg=$color_session_text] #S #[default]"
 # wg_battery="#{battery_status_fg} #{battery_icon} #{battery_percentage}"
 # wg_date="#[fg=$color_secondary]%h %d %H:%M#[default]"
-wg_user_host="#[fg=$color_level_ok]#(whoami)#[fg=$color_secondary]@#H"
+# wg_user_host="#[fg=$color_level_ok]#(whoami)#[fg=$color_secondary]@#H"
 wg_is_zoomed="#[fg=$color_dark,bg=$color_secondary]#{?window_zoomed_flag,[Z],}#[default]"
 # TODO: highlighted for nested local session as well
 wg_is_keys_off="#[fg=$color_light,bg=$color_window_off_indicator]#([ $(tmux show-option -qv key-table) = 'off' ] && echo 'OFF')#[default]"
 
 set -g status-left "$wg_session"
-set -g status-right "$wg_is_keys_off $wg_is_zoomed #{prefix_highlight} #{online_status} | #{sysstat_mem} | #{sysstat_cpu} | #{sysstat_loadavg} | $wg_user_host"
+set -g status-right "$wg_is_keys_off $wg_is_zoomed"
 
 # Configure online status ping address
-set -g @route_to_ping 'ipv4.icanhazip.com'
-set -g @online_icon "#[fg=$color_level_ok]✔#[default]"
-set -g @offline_icon "#[fg=$color_level_stress]x Offline#[default]"
+# set -g @route_to_ping 'ipv4.icanhazip.com'
+# set -g @online_icon "#[fg=$color_level_ok]✔#[default]"
+# set -g @offline_icon "#[fg=$color_level_stress]x Offline#[default]"
 
 # Configure view templates for tmux-plugin-sysstat "MEM" and "CPU" widget
-set -g @sysstat_mem_view_tmpl '#[fg=#{mem.color}]#{mem.pused}#[default] #{mem.used}'
-set -g @sysstat_cpu_view_tmpl '#[fg=#{cpu.color}]#{cpu.pused}#[default]'
+# set -g @sysstat_mem_view_tmpl '#[fg=#{mem.color}]#{mem.pused}#[default] #{mem.used}'
+# set -g @sysstat_cpu_view_tmpl '#[fg=#{cpu.color}]#{cpu.pused}#[default]'
 
 # Configure colors for tmux-plugin-sysstat "MEM" and "CPU" widget
-set -g @sysstat_cpu_color_low "$color_level_ok"
-set -g @sysstat_cpu_color_medium "$color_level_warn"
-set -g @sysstat_cpu_color_stress "$color_level_stress"
+# set -g @sysstat_cpu_color_low "$color_level_ok"
+# set -g @sysstat_cpu_color_medium "$color_level_warn"
+# set -g @sysstat_cpu_color_stress "$color_level_stress"
 
-set -g @sysstat_mem_color_low "$color_level_ok"
-set -g @sysstat_mem_color_medium "$color_level_warn"
-set -g @sysstat_mem_color_stress "$color_level_stress"
+# set -g @sysstat_mem_color_low "$color_level_ok"
+# set -g @sysstat_mem_color_medium "$color_level_warn"
+# set -g @sysstat_mem_color_stress "$color_level_stress"
 
 # set -g @sysstat_swap_color_low "$color_level_ok"
 # set -g @sysstat_swap_color_medium "$color_level_warn"
@@ -263,20 +257,20 @@ set -g @prefix_highlight_copy_mode_attr "fg=$color_dark,bg=$color_secondary"
 set -g @plugin 'tmux-plugins/tpm'
 # set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'tmux-plugins/tmux-online-status'
-set -g @plugin 'tmux-plugins/tmux-sidebar'
+# set -g @plugin 'tmux-plugins/tmux-online-status'
+# set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-open'
-set -g @plugin 'samoshkin/tmux-plugin-sysstat'
+# set -g @plugin 'tmux-plugins/tmux-open'
+# set -g @plugin 'samoshkin/tmux-plugin-sysstat'
 
 
 
 # Plugin properties
-set -g @sidebar-tree 't'
-set -g @sidebar-tree-focus 'T'
-set -g @sidebar-tree-command 'tree -C'
+# set -g @sidebar-tree 't'
+# set -g @sidebar-tree-focus 'T'
+# set -g @sidebar-tree-command 'tree -C'
 
-set -g @open-S 'https://www.google.com/search?q='
+# set -g @open-S 'https://www.google.com/search?q='
 
 
 # ==============================================
