--- a/zshrc.conf
+++ b/zshrc.conf
@@ -10,7 +10,7 @@ export ZSH="$HOME/.oh-my-zsh"
 # load a random theme each time oh-my-zsh is loaded, in which case,
 # to know which specific one was loaded, run: echo $RANDOM_THEME
 # See https://github.com/robbyrussell/oh-my-zsh/wiki/Themes
-ZSH_THEME="agnosterzak-pro"
+ZSH_THEME="agnoster"
 
 # Set list of themes to pick from when loading at random
 # Setting this variable when ZSH_THEME=random will cause zsh to load
@@ -91,6 +91,6 @@ export EDITOR='vim'
 source ~/.oh-my-zsh/custom/plugins/zsh-autosuggestions/zsh-autosuggestions.zsh
 autoload -U compinit && compinit
 
-bindkey -e
-bindkey '^[[1;3C' forward-word
-bindkey '^[[1;3D' backward-word
+# bindkey -e
+# bindkey '^[[1;3C' forward-word
+# bindkey '^[[1;3D' backward-word
