--- a/tmux.conf
+++ b/tmux.conf
@@ -262,7 +262,7 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-yank'
 # set -g @plugin 'tmux-plugins/tmux-open'
 # set -g @plugin 'samoshkin/tmux-plugin-sysstat'
-
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 
 # Plugin properties
