--- a/tmux.conf
+++ b/tmux.conf
@@ -10,8 +10,9 @@ set -g display-time 1500
 set -g remain-on-exit off
 set -g repeat-time 300
 setw -g allow-rename off
-setw -g automatic-rename off
+setw -g automatic-rename on
 setw -g aggressive-resize on
+set-option -g default-shell /bin/zsh
 
 # Change prefix key to "`", easier to type, same to "screen"
 unbind C-b
@@ -21,7 +22,7 @@ set -g prefix2 §
 
 # Set parent terminal title to reflect current window in tmux session 
 set -g set-titles on
-set -g set-titles-string "#I:#W"
+set -g set-titles-string "#I <-:-> #W"
 
 set -g base-index 1
 setw -g pane-base-index 1
@@ -59,7 +60,7 @@ unbind M-Right # resize 5 rows right
 unbind M-Left # resize 5 rows left
 
 # yank
-yank="~/.tmux/yank.sh"
+# yank="~/.tmux/yank.sh"
 
 # Edit configuration and reload
 bind C-e new-window -n 'tmux.conf' "sh -c '\${EDITOR:-vim} ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display \"Config reloaded\"'"
@@ -68,7 +69,7 @@ bind C-e new-window -n 'tmux.conf' "sh -c '\${EDITOR:-vim} ~/.tmux.conf && tmux 
 bind C-r source-file ~/.tmux.conf \; display "Config reloaded"
 
 # new window and retain cwd
-bind c new-window -c "#{pane_current_path}" -n "awesome"
+bind c new-window -c "#{pane_current_path}" -n "window #W"
 
 # Prompt to rename window right after it's created
 set-hook -g after-new-window 'command-prompt -I "#{window_name}" "rename-window '%%'"'
@@ -259,7 +260,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 # set -g @plugin 'tmux-plugins/tmux-online-status'
 # set -g @plugin 'tmux-plugins/tmux-sidebar'
-set -g @plugin 'tmux-plugins/tmux-yank'
+# set -g @plugin 'tmux-plugins/tmux-yank'
 # set -g @plugin 'tmux-plugins/tmux-open'
 # set -g @plugin 'samoshkin/tmux-plugin-sysstat'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
@@ -278,8 +279,8 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 # ==============================================
 
 # Session is considered to be remote when we ssh into host
-if-shell 'test -n "$SSH_CLIENT"' \
-    'source-file ~/.tmux/tmux.remote.conf'
+# if-shell 'test -n "$SSH_CLIENT"' \
+#     'source-file ~/.tmux/tmux.remote.conf'
 
 # We want to have single prefix key "C-a", usable both for local and remote session
 # we don't want to "C-a" + "a" approach either
